--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>｜北野エースWEB SHOP</title>
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Noto+Serif+JP:wght@200..900&display=swap" rel="stylesheet">        <link rel="stylesheet" href="./assets/css/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Noto+Serif+JP:wght@200..900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./assets/css/style.css">
         <style>
             .pf_header {
                 width: 100vw;
@@ -45,25 +46,27 @@
         <div class="pf_header">Header</div>
         <div class="pf_header-bg"></div>
         <div class="pf-fv">
-            <h1><img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/fv_title.webp" alt="贅沢ふりかけ"></h1>
+            <h1 class="fadein"><img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/fv_title.webp" alt="贅沢ふりかけ"></h1>
             <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/fv_treat.svg" alt="" class="pf-treat pf-sp">
             <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/responsive/fv_treat.svg" alt="" class="pf-treat pf-pc">
         </div>
         <main class="pf_main">
             <section class="pf-epilogue">
                 <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/epilogue_bg.webp" alt="">
-                <h2>ごはんを主役に！</h2>
-                <p>
-                    厳選された素材本来の旨味や<br>
-                    食感が楽しめる。<br>
-                    そんな贅沢なふりかけは<br>
-                    まさに究極のご飯のお供。<br>
-                    ほかほかご飯にのせるだけで、<br>
-                    心も体も満たされます。
-                </p>
+                <div class="fadeup">
+                    <h2>ごはんを主役に！</h2>
+                    <p>
+                        厳選された素材本来の旨味や<br>
+                        食感が楽しめる。<br>
+                        そんな贅沢なふりかけは<br>
+                        まさに究極のご飯のお供。<br>
+                        ほかほかご飯にのせるだけで、<br>
+                        心も体も満たされます。
+                    </p>    
+                </div>
             </section>
             <section class="pf-detail">
-                <article>
+                <article class="fadeup">
                     <p class="catchcopy">
                         <span><img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/catchcopy-treat.svg" alt=""></span>
                         パリパリザクザク食感<br>
@@ -77,6 +80,7 @@
                         </div>
                         <div class="con">
                             <h2>サムライ贅沢ふりかけ</h2>
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/line.svg" alt="" class="pf-line">
                             <p>全国ふりかけグランプリ2024 金賞受賞。一番摘みの有明海苔の豊かな旨味と高級青のりの芳醇な香りが主役。これら選りすぐりの海の恵みが、格別な磯の香りを織りなし、厳選された秘伝のタレと絶妙に調和します。</p>
                             <p class="pf-price"><span>&yen;</span>1,296<span>税込</span></p>
                             <a href="https://www.kitano-ace.jp/view/item/000000001619" class="pf-cta">商品を詳しく見る</a>
@@ -84,7 +88,7 @@
                         </div>    
                     </div>
                 </article>
-                <article>
+                <article class="fadeup">
                     <p class="catchcopy">
                         <span><img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/catchcopy-treat.svg" alt=""></span>
                         あごと鰹の削り節の旨みと<br>
@@ -98,6 +102,7 @@
                         </div>
                         <div class="con">
                             <h2>あご入りたっぷり海苔めし</h2>
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/line.svg" alt="" class="pf-line">
                             <p>あご削り節のたん白な味わいと鰹削り節の旨み、海苔の磯の香りが食欲をそそります。温かいご飯にかけて、醤油をかければ具材が踊るぶっかけめし。冷奴や納豆のトッピング、うどんやサラダの具材としても大活躍です。</p>
                             <p class="pf-price"><span>&yen;</span>697<span>税込</span></p>
                             <a href="https://www.kitano-ace.jp/view/item/000000001595" class="pf-cta">商品を詳しく見る</a>
@@ -105,7 +110,7 @@
                         </div>    
                     </div>
                 </article>
-                <article>
+                <article class="fadeup">
                     <p class="catchcopy">
                         <span><img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/catchcopy-treat.svg" alt=""></span>
                         帆立がゴロゴロ！<br>
@@ -122,6 +127,7 @@
                                 ゴロッと北海ホタテの<br>
                                 焦がし醤油ふりかけ
                             </h2>
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/line.svg" alt="" class="pf-line">
                             <p>北海道産の干し貝柱と青森県産の帆立水煮を贅沢に使用した生タイプのふりかけ。しっとり食感で、濃厚な帆立を味わえます。ゴロっとした帆立がたっぷり入っており、まるで帆立焼きを食べているかのよう……！</p>
                             <p class="pf-price"><span>&yen;</span>647<span>税込</span></p>
                             <a href="https://www.kitano-ace.jp/view/item/000000001460" class="pf-cta">商品を詳しく見る</a>
@@ -129,7 +135,7 @@
                         </div>    
                     </div>
                 </article>
-                <article>
+                <article class="fadeup">
                     <p class="catchcopy">
                         <span><img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/catchcopy-treat.svg" alt=""></span>
                         たっぷりおかかと<br>
@@ -147,6 +153,7 @@
                                 旨味ひろがるかつお節で<br>
                                 仕上げたやみつきのり
                             </h2>
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/line.svg" alt="" class="pf-line">
                             <p>瀬戸内海産の風味豊かな海苔に、枕崎産かつお節で作った旨味たっぷりのおかかを混ぜ込みました。おかか好きにはたまらない、やみつきになる美味しさです。ご飯にはもちろん、卵焼きや焼きうどんにかけても絶品です。</p>
                             <p class="pf-price"><span>&yen;</span>431<span>税込</span></p>
                             <a href="https://www.kitano-ace.jp/view/item/000000001462" class="pf-cta">商品を詳しく見る</a>
@@ -154,7 +161,7 @@
                         </div>    
                     </div>
                 </article>
-                <article>
+                <article class="fadeup">
                     <p class="catchcopy">
                         <span><img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/catchcopy-treat.svg" alt=""></span>
                         厳選された良質な素材<br>
@@ -168,6 +175,7 @@
                         </div>
                         <div class="con">
                             <h2>しそわかめ</h2>
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/line.svg" alt="" class="pf-line">
                             <p>厳選された良質なわかめを使い、素材本来の味を生かして丁寧に加工しました。しその爽やかな香りと、わかめの優しい味わいが絶妙なバランス。ご飯のお供にはもちろん、お弁当や贈り物にも喜ばれる一品です。</p>
                             <p class="pf-price"><span>&yen;</span>497<span>税込</span></p>
                             <a href="https://www.kitano-ace.jp/view/item/000000000800" class="pf-cta">商品を詳しく見る</a>
@@ -175,7 +183,7 @@
                         </div>    
                     </div>
                 </article>
-                <article>
+                <article class="fadeup">
                     <p class="catchcopy">
                         <span><img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/catchcopy-treat.svg" alt=""></span>
                         爽やかな梅味と赤しそに<br>
@@ -189,6 +197,7 @@
                         </div>
                         <div class="con">
                             <h2>ねばっとろふりかけ梅</h2>
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/line.svg" alt="" class="pf-line">
                             <p>国産昆布のとろろ昆布を使用。乾燥させて粉砕することで、独特のねばっとろ食感を実現しました。梅味付きごま、赤しそ、乾燥梅の爽やかな酸味と味わいが特徴。まずは炊きたてのご飯にかけてお召し上がりください。</p>
                             <p class="pf-price"><span>&yen;</span>431<span>税込</span></p>
                             <a href="https://www.kitano-ace.jp/view/item/000000001607" class="pf-cta">商品を詳しく見る</a>
@@ -202,45 +211,45 @@
                 <h2>おすすめ商品</h2>
                 <ul>
                     <li>
-                        <a href="https://www.kitano-ace.jp/view/item/000000001201">
-                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/1.webp" alt="">
-                            <h3>大人のための贅沢なごまドレッシング</h3>
-                            <p>&yen;<span>681</span> (税込)</p>
+                        <a href="https://www.kitano-ace.jp/view/item/000000001608">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/recommend1.webp" alt="">
+                            <h3>ねばっとろふりかけ鰹</h3>
+                            <p>&yen;<span>431</span> (税込)</p>
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.kitano-ace.jp/view/item/000000001051">
-                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2.webp" alt="">
-                            <h3>ごま油と塩にんにくの芳醇ドレッシング</h3>
-                            <p>&yen;<span>647</span> (税込)</p>
+                        <a href="https://www.kitano-ace.jp/view/item/000000000672">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/recommend2.webp" alt="">
+                            <h3>ねばっとろふりかけ わさび</h3>
+                            <p>&yen;<span>350</span> (税込)</p>
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.kitano-ace.jp/view/item/000000001288">
-                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/3.webp" alt="">
-                            <h3>玉ねぎのクリーミーフレンチドレッシング</h3>
-                            <p>&yen;<span>465</span> (税込)</p>
+                        <a href="https://www.kitano-ace.jp/view/item/000000001609">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/recommend3.webp" alt="">
+                            <h3>ねばっとろふりかけ山葵</h3>
+                            <p>&yen;<span>431</span> (税込)</p>
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.kitano-ace.jp/view/item/000000001341">
-                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/4.webp" alt="">
-                            <h3>和風シーザードレッシング</h3>
-                            <p>&yen;<span>647</span> (税込)</p>
+                        <a href="https://www.kitano-ace.jp/view/item/000000000266">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/recommend4.webp" alt="">
+                            <h3>焼き塩さば</h3>
+                            <p>&yen;<span>499</span> (税込)</p>
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.kitano-ace.jp/view/item/000000000282">
-                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/5.webp" alt="">
-                            <h3>大人のためのシーザードレッシング</h3>
-                            <p>&yen;<span>594</span> (税込)</p>
+                        <a href="https://www.kitano-ace.jp/view/item/000000000448">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/recommend5.webp" alt="">
+                            <h3>旨辛 ラー油鮭ン</h3>
+                            <p>&yen;<span>648</span> (税込)</p>
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.kitano-ace.jp/view/item/000000000761">
-                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/6.webp" alt="">
-                            <h3>大人のためのたまねぎドレッシング</h3>
-                            <p>&yen;<span>746</span> (税込)</p>
+                        <a href="https://www.kitano-ace.jp/view/item/000000000294">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/recommend6.webp" alt="">
+                            <h3>からし明太子高菜</h3>
+                            <p>&yen;<span>399</span> (税込)</p>
                         </a>
                     </li>
                 </ul>
@@ -251,26 +260,26 @@
                 <ul>
                     <li>
                         <a href="https://www.kitano-ace.jp/view/category/kitanoselection">
-                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/7.webp" alt="">
-                            <h3>キタノセレクション</h3>
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/lp1.webp" alt="">
+                            <h3>北野エースだけのオリジナル商品</h3>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.kitano-ace.jp/view/page/spring-dressing">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/lp2.webp" alt="">
+                            <h3>春のドレッシング</h3>
                         </a>
                     </li>
                     <li>
                         <a href="https://www.kitano-ace.jp/view/page/currybook">
-                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/8.webp" alt="">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/lp3-re.webp" alt="">
                             <h3>カレーなる本棚&reg;</h3>
                         </a>
                     </li>
                     <li>
                         <a href="https://www.kitano-ace.jp/view/page/onoeukon-kyettharhinspicy">
-                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/9.webp" alt="">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/lp4-re.webp" alt="">
                             <h3>麻辣チェッターヒン</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.kitano-ace.jp/view/page/onoeukon">
-                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/10.webp" alt="">
-                            <h3>尾上右近さんおすすめカレー11選</h3>
                         </a>
                     </li>
                 </ul>
